[gd_scene load_steps=5 format=2]

[ext_resource path="res://Boss/Rain.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprite/Boss/Rain.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30.0921, 110.573 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 40.9461, 97.1231 )

[node name="Rain" type="RigidBody2D"]
collision_layer = 17
collision_mask = 17
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="TimerSpawn" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.561249, -7.85722 )
scale = Vector2( 1.13515, 0.819658 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 17
collision_mask = 17

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 3.05176e-05, -7.85723 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[connection signal="body_entered" from="." to="." method="_on_Rain_body_entered"]
[connection signal="body_shape_entered" from="." to="." method="_on_Rain_body_shape_entered"]
[connection signal="timeout" from="TimerSpawn" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
